<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_flights_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nooulaif.helloworld.FlightsSearchActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editFrom"
        android:hint="@string/from_where"
        android:maxLines="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:inputType="textAutoComplete" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:layout_marginTop="11dp"
        android:id="@+id/editTo"
        android:layout_below="@+id/editFrom"
        android:layout_alignParentStart="true"
        android:hint="@string/where_to"
        android:maxLines="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTo"
        android:layout_alignParentStart="true"
        android:id="@+id/date_pickers">

        <TextView
            android:id="@+id/textWhenStart"
            android:text="@string/when_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/editWhenStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:onClick="showDatePickerDialog" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textWhenEnd"
            android:text="@string/when_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/editWhenEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:onClick="showDatePickerDialog" />

    </LinearLayout>

    <CheckBox
        android:text="@string/one_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one_way"
        android:layout_below="@+id/date_pickers"
        android:layout_alignParentStart="true"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textNumberOfAdults"
        android:text="@string/number_of_adults"
        android:layout_below="@+id/one_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNumberOfAdults"
        android:id="@+id/editNumberOfAdults"
        android:max="100"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/textNumberOfKids"
        android:text="@string/number_of_kids"
        android:layout_below="@+id/editNumberOfAdults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNumberOfKids"
        android:id="@+id/editNumberOfKids"
        android:max="100"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_below="@+id/editNumberOfKids" />

</RelativeLayout>
